# RoboticBall

./: LICENSE  README.md
.github/workflows/: release.yml
firmware/: main.ino
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/scripts/: release-tag.mjs  setup-android-signing.mjs
frontend/src/: App.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: ConnectionSheet.tsx  DesktopDashboard.tsx  Joystick.tsx  MobileControlScreen.tsx  SplashScreen.tsx  StatusPill.tsx  SvgIcon.tsx
frontend/src/lib/: robot.ts
frontend/src/store/: robotStore.ts
hardware/: BOM.txt  Robot_ball.PrjPcb  Robot_ball_Pcb.PcbDoc  Robot_ball_Sheet.SchDoc
mechanical/solidworks/: Body_main.SLDPRT  anchor_p1.SLDPRT  anchor_p2.SLDPRT  cap.SLDPRT  motor_holder_1.SLDPRT  motor_holder_2.SLDPRT  pcb_holder.SLDPRT  wheel_1.SLDPRT  wheel_2.SLDPRT
mechanical/solidworks/Step_pcb/: PCB1.step
mechanical/stl/: Body_main.STL  anchor_p1.STL  anchor_p2.STL  cap.STL  motor_holder_1.STL  motor_holder_2.STL  pcb_holder.STL  wheel.STL
