[package]
name = "gyrobit"
version = "0.2.0"
description = "Gyrobit robot controller"
authors = ["Gyrobit"]
edition = "2021"

[lib]
name = "gyrobit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
